--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cds-hooks",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Clinical Decision Support",
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
+    "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "standard-version": "^8.0.2",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
