--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cds-hooks",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Clinical Decision Support",
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "release": "standard-version",
+    "public": "standard-version && git push --follow-tags origin master && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
